# simplesite

./: .gitignore  Dockerfile  README.md  az_config.sh  build.sh  catchup.sh  pyproject.toml  requirements.txt  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: test.yaml
app/: config.py  crud.py  main.py  routes.py
app/static/css/: main.css
app/templates/: catalog.html  main.html  search.html
app/templates/shared/: _base.html  _header.html
assets/: record.tape
data/: data.json
docs/: 00_Preface.md  01_Chapter_1.md  02_Chapter_2.md  03_Chapter_3.md  04_Chapter_4.md
src/: Dockerfile  appsvc.yaml  artist_api.py
src/app/: config.py  crud.py  main.py  routes.py
src/app/static/css/: main.css
src/app/templates/shared/: _base.html  _footer.html  _header.html
src/data/: data.json
tests/: test_main.py
