[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mario Munoz", email = "pythonbynight@gmail.com"},
]
dependencies = [
    "fastapi>=0.92.0",
    "uvicorn>=0.20.0",
    "httpx>=0.23.3",
    "pytest>=7.2.1",
    "Jinja2>=3.1.2",
    "pytailwindcss>=0.1.4",
]
requires-python = ">=3.11"
license = {text = "MIT"}
