[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mario Munoz", email = "pythonbynight@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.1",
    "httpx>=0.23.3",
    "pytest>=7.2.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}
